# kniitLibCPlusPlus

./: .gitignore  .lldbinit  CHANGELOG.md  CMakeLists.txt  Changelog  README.md  README_FOR_IMPORT_VS2019.txt  build.gradle  example.cpp  gradle.properties  gradle_build_variants.json  settings.gradle
.github/workflows/: buildcheck.yaml  dev-build.yaml  rc.yaml  release.yaml  release_build.yaml
collections/: list.h  set.h
core/: codecs.h  comparator.h  core.h  datatype.h  datatypes.h  exception.h  number.h  string.h
core/source/: codecs.cpp  datatype.cpp  number.cpp  string.cpp
data/: data_stream.h  input_stream.h  output_stream.h  reader_input_stream.h  writer_output_stream.h
data/source/: input_stream.cpp  output_stream.cpp  reader_input_stream.cpp  reader_input_stream_old.cpp  writer_output_stream.cpp
data/stream/: output_stream.h
data/stream/impl/buffered/: buffered_output_stream.h  buffered_stream_core.h
data/stream/impl/c_stream/: input_c_stream.h  input_output_c_stream.h  output_c_stream.h
data/stream/impl/c_stream/source/: input_c_stream.cpp  input_output_c_stream.cpp  output_c_stream.cpp
data/stream/impl/liststream/: input_output_list_stream.h  output_list_stream.h
lldb/: module.py
math/: matrix.h
source/: library.cpp
src/main/collections/: iterator.h  list.h
src/main/core/: codec.h  codecs.h  core.h  exception.h  number.h  status.h  string.h
src/main/core/source/: codec.cpp  codecs.cpp  exception.cpp  number.cpp  string.cpp
src/main/cpp/core/: codec.cpp  codecs.cpp  exception.cpp  number.cpp  string.cpp
src/main/cpp/data/: reader_input_stream.cpp  reader_input_stream_old.cpp  writer_output_stream_old.cpp
src/main/cpp/data/stream/c_stream/: input_c_stream.cpp  input_output_c_stream.cpp  output_c_stream.cpp
src/main/data/: delimiter_strategy.h  reader_input_stream.h  reader_input_stream_old.h  writer_output_stream_old.h
src/main/data/source/: reader_input_stream.cpp  reader_input_stream_old.cpp  writer_output_stream_old.cpp
src/main/data/stream/: data_stream.h  input_stream.h
src/main/data/stream/impl/buffered/: buffered_input_stream.h
src/main/data/stream/impl/c_stream/: input_c_stream.h  input_output_c_stream.h
src/main/data/stream/impl/c_stream/source/: input_c_stream.cpp  output_c_stream.cpp
src/main/data/stream/impl/liststream/: input_list_stream.h  input_output_list_stream.h  output_list_stream.h
src/main/math/: matrix.h
src/main/public/collections/: list.h
src/main/public/core/: codec.h  codecs.h  core.h  exception.h  number.h  status.h  string.h
src/main/public/data/: delimiter_strategy.h  reader_input_stream.h  reader_input_stream_old.h  writer_output_stream_old.h
src/main/public/data/stream/: data_stream.h  input_output_stream.h  input_stream.h  output_stream.h
src/main/public/data/stream/buffered/: buffered_input_stream.h  buffered_output_stream.h  buffered_stream_core.h
src/main/public/data/stream/c_stream/: input_c_stream.h  input_output_c_stream.h  output_c_stream.h
src/main/public/data/stream/liststream/: input_list_stream.h  input_output_list_stream.h  output_list_stream.h
src/main/public/math/: matrix.h
src/main/window/: frame.h  win_app.h
src/test/cpp/: hello_test.cpp  reader_input_stream_test.cpp  test_context.h
src/test/resources/: input.txt
src/test/source/: library.cpp
window/: win_app.h
